--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,14 @@ android {
             storeFile file('C:/Users/Ianick/AndroidKeystores/SuperApp_v1.0.jks')
         }
     }
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.monitoreomayorista.superapp"
         minSdkVersion 21
-        targetSdkVersion 25
-        versionCode 7
-        versionName "1.3"
+        targetSdkVersion 27
+        versionCode 8
+        versionName "1.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -29,8 +29,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:design:27.0.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    implementation files('libs/trace.jar')
 }
